# llm-researcher

./: .env  main.py  requirements.txt
app/api/: routes.py
app/core/: app.py  config.py
llm_researcher/: .env  README.md  pyproject.toml  report.html  streamlit_chat.py
llm_researcher/db/2f3be147-a89f-429c-9fb9-9ac4bc91f60d/: index_metadata.pickle
llm_researcher/src/llm_researcher/: crew.py  main.py
llm_researcher/src/llm_researcher/config/: agents.yaml  tasks.yaml
llm_researcher/src/llm_researcher/tools/: custom_tool.py
