[project]
name = "llm_researcher"
version = "0.1.0"
description = "llm-researcher using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.186.1,<1.0.0"
]

[project.scripts]
llm_researcher = "llm_researcher.main:run"
run_crew = "llm_researcher.main:run"
train = "llm_researcher.main:train"
replay = "llm_researcher.main:replay"
test = "llm_researcher.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
